# PA171

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
docs/: compression_scheme.drawio
src/: CMakeLists.txt
src/pa171/: CMakeLists.txt  compress.cpp  compressed_image_io.cpp  compressed_image_io.hpp  compression_options.cpp  compression_options.hpp  decompress.cpp  image_compressor_lossless.cpp  image_compressor_lossless.hpp  image_compressor_lossy.cpp  image_compressor_lossy.hpp  image_decoder.cpp  image_decoder.hpp  image_encoder.cpp  image_encoder.hpp  image_io.cpp  image_io.hpp  main.cpp
src/pa171/coding/: CMakeLists.txt  lzw_base.cpp  lzw_base.hpp  lzw_decoder.cpp  lzw_decoder.hpp  lzw_encoder.cpp  lzw_encoder.hpp
src/pa171/quantization/: CMakeLists.txt  haar_iwt.cpp  haar_iwt.hpp  quantizer.cpp  quantizer.hpp
src/pa171/transform/: CMakeLists.txt  wavelet.cpp  wavelet.hpp
src/pa171/utils/: CMakeLists.txt  numeric.cpp  numeric.hpp  view_2d.cpp  view_2d.hpp
tests/: CMakeLists.txt
tests/pa171/: CMakeLists.txt  test_lzw.cpp
